[tool.poetry]
name = "co2-dashboard"
version = "0.1.0"
description = ""
authors = ["Sam Chamberlain <sam.d.chamberlain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
jupyterlab = "^4.0.8"
streamlit = "^1.28.1"
ipykernel = "^6.26.0"
plotly = "^5.18.0"
altair = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
