[tool.poetry]
name = "co2-dashboard"
version = "0.1.0"
description = ""
authors = ["Sam Chamberlain <sam.d.chamberlain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.28.1"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
